--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Styles/portfolio.css" />
   </head>
   <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
       <nav>
         <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -38,7 +38,87 @@
         <img class="banner-profile-pic" src="images/hardy.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- about me section start -->
+      <section class="about secondary-bg">
+        <h3 class="section-tittle">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-items">
+          <!-- .about-item*4>p.item+p.item-description -->
+          <div class="about-item">
+            <p class="item-tittle dark-2">Name</p>
+            <p class="item-description dark-2">Mary Hardy</p>
+          </div>
+          <div class="about-item">
+            <p class="item-tittle dark-3">Email:</p>
+            <p class="item-description dark-2">info@gmail.com</p>
+          </div>
+          <div class="about-item">
+            <p class="item-tittle dark-3">Date of birth:</p>
+            <p class="item-description dark-2">11 November 1987</p>
+          </div>
+          <div class="about-item">
+            <p class="item-tittle dark-3">From:</p>
+            <p class="item-description dark-2">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
+      <!-- what i do section start -->
+      <section class="skills">
+        <h3 class="section-tittle text-center">What I do</h3>
+        <p class="section-description text-center">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skill-container">
+          <!-- .skill*4>img+h4.skill-tittle+p.skill-description -->
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h4 class="skill-tittle">Vanilla JavaScript</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h4 class="skill-tittle">React</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h4 class="skill-tittle">Node.js</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h4 class="skill-tittle">MongoDB</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
